# hw-submission-cli

./: setup.cfg
src/hw/: main.py
