[metadata]
name = hw
version = 0.0.1
author = Ashraful Firoz
author_email = ashraf.akon201@gmail.com 
description = A python package for submitting programming homework and checking efficiency
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/AshrafAkon
project_urls =
    Bug Tracker = https://github.com/AshrafAkon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires = 
    requests
    beautifulsoup4
    click
    python-dotenv
   

packages = find:
python_requires = >=3.6

[options.packages.find]
where = src/

[options.entry_points]
console_scripts =
    hw = hw.main:cli
    